--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-3"><a href="/" class="main-logo"><img src="img/logo.png" alt=""></a></div>
-        <div class="col-lg-9">
-            <div class="row">
+<div class="container main-container">
+    <div class="header">
+        <div class="logo-wrap"><a href="/" class="main-logo"><img src="img/logo.png" alt=""></a></div>
+        <div class="content-area">
+            <div>
                 <div class="float-left">
                     <div class="top-basket blue">
                         <span class="top-basket_icon"></span>
@@ -26,23 +26,44 @@
                     <div class="working-hours">
                         <span>Режим работы Пн-Пт 10:00-21:00 Сб-Вс 12:00-18:00</span>
                     </div>
-                </div>
-                <div class="float-right">
-                    <div class="authorize">
-                        <span class="authorize_login">Вход с паролем</span><span class="divider"></span><span class="authorize_registration">Регистрация</span>
+                    <div class="top-phones-wrap">
+                        <div class="phone"><span class="text-blue">8 800 </span><span>1000-468</span>&nbsp;&nbsp;<span class="phone-title">Регионы</span></div>
+                        <div class="phone"><span class="text-blue">9 031 </span><span>234-34-46</span>&nbsp;<span class="phone-title">Санкт-Петербург</span></div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="float-right search-wrap">
-                    <input type="text" value="">
-                    <button class="glyphicon glyphicon-search"></button>
+                <div class="float-right">
+                    <div class="authorize text-grey">
+                        <span class="authorize_login">Вход с паролем</span><span class="divider"></span><span class="authorize_registration">Регистрация</span>
+                    </div>
+                    <div class="search-wrap">
+                        <input placeholder="Поиск" type="text" value="">
+                        <button class="glyphicon glyphicon-search"></button>
+                    </div>
+
                 </div>
-                <div class="float-right top-phones-wrap">
-                    <div class="phone"><span class="text-blue">8 800 </span><span>1000-468</span><span class="phone-title">Регионы</span></div>
-                    <div class="phone"><span class="text-blue">9 031 </span><span>234-34-46</span><span class="phone-title">Санкт-Петербург</span></div>
-                </div>
             </div>
+        </div>
+    </div>
+</div>
+<div class="footer-container">
+    <div class="footer">
+        <div class="footer-contacts">
+            <div class="phones-wrap">
+                <div class="phone"><span class="text-blue">8 800 </span><span>1000-468</span>&nbsp;&nbsp;<span class="phone-title">Регионы</span></div>
+                <div class="phone"><span class="text-blue">9 031 </span><span>234-34-46</span>&nbsp;<span class="phone-title">Санкт-Петербург</span></div>
+            </div>
+            <div class="address-wrap text-white">
+                Email: <span class="text-blue">info@emultiparts.ru</span>
+                <br>
+                191119, Санкт-Петербург, ул. Печатника Григорьева, дом 10
+            </div>
+            <div class="margin-top-15 text-blue">
+                <a href="/">Запчасти и комплектующие для ноутбуков</a>
+            </div>
+        </div>
+        <div class="footer-copyright text-white">
+            <img src="img/count.png" alt="" class="count">
+            <div class="copyright-text"><span class="glyphicon glyphicon-copyright-mark"></span>2009-20015&nbsp;emultiparts.ru Все права защищеныюсе права защищены.</div>
         </div>
     </div>
 </div>
